# ottomator-agents

New Bolt agent made with DIY/: AI Agent Frontend Prompt.md  DeepSeek R1 Agent Prompt.md
crawl4AI-agent/: hello.py  pyproject.toml
crawl4AI-agent/crawl4AI-examples/: markdown.mmd
pydantic-github-agent/: .gitignore  AI Agent Frontend Prompt.md  check_enpoint.py  clean_enpoint.py  github_agent.py  github_agent_endpoint.py  pyproject.toml  requirements.txt  setup_ignore.ps1
pydantic-github-agent/studio-integration-version/pydantic_ai_github_agent/: github_agent.py
~sample-python-agent~/: sample_supabase_agent.py
