[project]
name = "pydantic-github-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "devtools>=0.12.2",
    "fastapi",
    "logfire>=3.2.0",
    "pydantic",
    "pydantic-ai>=0.0.20",
    "python-dotenv>=1.0.1",
    "supabase",
    "uvicorn",
]
